--- a/app/views/tax_invoices/_form.html.erb
+++ b/app/views/tax_invoices/_form.html.erb
@@ -34,6 +34,14 @@
       </div>
     </div>
 
+    <div class="control-group">
+      <%= f.label :paid_payment, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :paid_payment, :class => 'text_field' %>
+      </div>
+    </div>
+
+
 
 
 
