--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -48,7 +48,7 @@
         <td><%= tax_invoice.total_tax.round(2) %></td>
         <td><%= tax_invoice.total_payment.round(2) %></td>
         <td><%= tax_invoice.paid_payment %></td>
-        <td><%= tax_invoice.unpaid_payment %></td>
+        <td><%= tax_invoice.unpaid_payment.round(2) %></td>
         <td>
 
 
