before invoice quantity added

--- a/app/views/tax_invoices/_form.html.erb
+++ b/app/views/tax_invoices/_form.html.erb
@@ -35,6 +35,13 @@
     </div>
 
     <div class="control-group">
+      <%= f.label :rejected_quantity, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :rejected_quantity, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
       <%= f.label :paid_payment, :class => 'control-label' %>
       <div class="controls">
         <%= f.text_field :paid_payment, :class => 'text_field' %>
