--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -5,20 +5,20 @@
   </title>
 </head>
 <body>
-<table height="1250" width="1000" align="center">
+<table height="1400" width="1150" align="center">
   <tr>
     <td>
-      <table height="200" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="200" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
         <tr>
           <td valign="top">
 
 
             <div align="center">Subject to Nashik Jurisdiction</div>
-            <div align="right">Mo.no :- </div>
+            <div align="right">Mo.no:- 9823255572  </div>
             <div align="center">CHALLAN CUM INVOICE</div>
 
-            <div class="logo"><%= image_tag("/app/assets/images/scsc.png")  %><h1 align="center"><b>Shree Chakradhar Swami Engineering</b></h1></div>
-            <div align="center"><b>[ISO : 9001 Certified]</b></div>
+            <div class="logo"><h1 align="center"><b>Shree Chakradhar Swami Engineering</b></h1></div>
+            <div align="center"><b>[ISO 9001 : 2008 Certified]</b></div>
             <div align="center"><h3>SPECIALIST IN :</B> INTERNAL GRINDING / CYLINDRICAL GRINDING & SURFACE GRINDING (ROTARY)
             </h3></div>
             <div align="center"><b>Office : </b>R/H No. 10, Ganjanan R/h, Radha krushna Nagar, Ashok Nagar, Satpur, Nashik-12.</div>
@@ -27,7 +27,7 @@
         </tr>
       </table>
 
-      <table height="150" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="150" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr>
 
@@ -57,7 +57,7 @@
         </tr>
       </table>
 
-      <table height="35" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="35" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top" height="15%">
           <td width="4%" align="center">Sr. No</td>
@@ -69,7 +69,7 @@
         </tr>
       </table>
 
-      <table height="35" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="35" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top" >
           <td width="4%" align="center">&nbsp;</td>
@@ -83,7 +83,7 @@
         </tr>
       </table>
 
-      <table height="60" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -97,7 +97,7 @@
         </tr>
       </table>
 
-      <table height="60" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -111,7 +111,21 @@
         </tr>
       </table>
 
-      <table height="270" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="4%" align="center">&nbsp;</td>
+          <td width="15%" align="center">&nbsp;</td>
+          <td width="30%" align="center"> &nbsp;</td>
+          <td width="13%" align="center">Rejected Quantity as scrap<br><%= @tax_invoice.rejected_quantity %></td>
+          <td width="23%" align="center">&nbsp;</td>
+
+          <td width="15%" align="center">&nbsp;</td>
+
+        </tr>
+      </table>
+
+      <table height="270" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -125,7 +139,21 @@
         </tr>
       </table>
 
-      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="4%" align="center">&nbsp;</td>
+          <td width="15%" align="center">&nbsp;</td>
+          <td width="30%" align="center">&nbsp;</td>
+          <td width="13%" align="center">&nbsp;</td>
+          <td width="23%" align="center">2% TDS</td>
+
+          <td width="15%" align="center"><%= @tax_invoice.tds.round(2) %></td>
+
+        </tr>
+      </table>
+
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -139,7 +167,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -153,7 +181,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -168,7 +196,7 @@
       </table>
 
 
-      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -186,7 +214,7 @@
       </table>
 
 
-      <table height="150" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="150" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="60%">
@@ -233,7 +261,7 @@
         </tr>
       </table>
       <!---------------------------------------------------------------------------------------------------->
-      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
         <tr>
           <td>
             Rs. in words:
@@ -241,7 +269,7 @@
         </tr>
       </table>
       <!---------------------------------------------------------------------------------------------------->
-      <table height="60" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
         <tr>
           <td width="60%" valign="top">
             TERMS: 24% interest per annum will be charged on all account remain unpaid after delivery our responsibligy ceases once the goods will leave our factory. All disputes to be settled within Nashik Jurisdiction.
@@ -253,7 +281,7 @@
       </table>
       <!---------------------------------------------------------------------------------------------------->
 
-      <table height="80" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="80" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
         <tr>
           <td width="60%" valign="bottom">
             <b>Receiver's Signature & Stamp</b>
