--- a/app/views/bank_transactions/_form.html.erb
+++ b/app/views/bank_transactions/_form.html.erb
@@ -41,6 +41,13 @@
     </div>
   </div>
 
+    <div class="control-group">
+      <%= f.label :person_name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :person_name, :class => 'number_field' %>
+      </div>
+    </div>
+
 
 
 
