--- a/app/views/bank_transactions/index.html.erb
+++ b/app/views/bank_transactions/index.html.erb
@@ -11,6 +11,7 @@
       <th><%= model_class.human_attribute_name(:type) %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
       <th><%= model_class.human_attribute_name(:micor_code) %></th>
+      <th><%= model_class.human_attribute_name(:person_name) %></th>
 
 
 
@@ -28,6 +29,7 @@
         <td><%= bank_transaction.transaction_type %></td>
         <td><%= bank_transaction.amount %></td>
         <td><%= bank_transaction.micor_code %></td>
+        <td><%= bank_transaction.person_name %></td>
 
 
 
