--- a/app/views/bank_transactions/show.html.erb
+++ b/app/views/bank_transactions/show.html.erb
@@ -15,6 +15,8 @@
   <dd><%= @bank_transaction.amount %></dd>
   <dt><strong><%= model_class.human_attribute_name(:micor_code) %>:</strong></dt>
   <dd><%= @bank_transaction.micor_code %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:person_name) %>:</strong></dt>
+  <dd><%= @bank_transaction.person_name %></dd>
 
 
 
