--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -16,6 +16,7 @@
       <th><%= model_class.human_attribute_name(:invoice_type) %></th>
       <th><%= model_class.human_attribute_name(:quantity) %></th>
       <th><%= model_class.human_attribute_name(:return_quantity) %></th>
+      <th><%= model_class.human_attribute_name(:rejected_quantity) %></th>
       <th><%= model_class.human_attribute_name(:final_quantity) %></th>
       <th><%= model_class.human_attribute_name(:rate) %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
@@ -40,6 +41,7 @@
         <td><%= tax_invoice.invoice_type %></td>
         <td><%= tax_invoice.quantity %></td>
         <td><%= tax_invoice.return_quantity %></td>
+        <td><%= tax_invoice.rejected_quantity %></td>
         <td><%= tax_invoice.final_quantity %></td>
         <td><%= tax_invoice.rate %></td>
         <td><%= tax_invoice.amount %></td>
