po_quantity added

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -34,9 +34,9 @@
       </div>
     </div>
     <div class="control-group">
-      <%= f.label :quantity, :class => 'control-label' %>
+      <%= f.label :po_quantity, :class => 'control-label' %>
       <div class="controls">
-        <%= f.text_field :quantity, :class => 'number_field' %>
+        <%= f.text_field :po_quantity, :class => 'number_field' %>
       </div>
     </div>
 
