--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,7 +11,7 @@
       <th><%= model_class.human_attribute_name(:product_number) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:product_type) %></th>
-      <th><%= model_class.human_attribute_name(:quantity) %></th>
+      <th><%= model_class.human_attribute_name(:po_quantity) %></th>
 
 
 
@@ -27,7 +27,7 @@
         <td><%= order.product_number %></td>
         <td><%= order.product_name %></td>
         <td><%= order.product_type %></td>
-        <td><%= order.quantity %></td>
+        <td><%= order.po_quantity %></td>
 
 
 
