--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -89,7 +89,7 @@
           <td width="4%" align="center">&nbsp;</td>
           <td width="15%" align="center"><%= @tax_invoice.product_number %></td>
           <td width="30%" align="center"> <%= @tax_invoice.product_name %></td>
-          <td width="13%" align="center"><%= @tax_invoice.quantity %></td>
+          <td width="13%" align="center"><%= @tax_invoice.po_quantity %></td>
           <td width="23%" align="center">&nbsp;</td>
 
           <td width="15%" align="center">&nbsp;</td>
