--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,8 +14,8 @@
   <dd><%= @order.product_name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_type) %>:</strong></dt>
   <dd><%= @order.product_type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
-  <dd><%= @order.quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:po_quantity) %>:</strong></dt>
+  <dd><%= @order.po_quantity %></dd>
 
 
 </dl>
