--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -18,8 +18,8 @@
   <dd><%= @tax_invoice.product_name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:invoice_type) %>:</strong></dt>
   <dd><%= @tax_invoice.invoice_type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
-  <dd><%= @tax_invoice.quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:po_quantity) %>:</strong></dt>
+  <dd><%= @tax_invoice.po_quantity %></dd>
   <dt><strong><%= model_class.human_attribute_name(:return_quantity) %>:</strong></dt>
   <dd><%= @tax_invoice.return_quantity %></dd>
   <dt><strong><%= model_class.human_attribute_name(:rejected_quantity) %>:</strong></dt>
