invoice quantity added

--- a/app/views/tax_invoices/edit.html.erb
+++ b/app/views/tax_invoices/edit.html.erb
@@ -36,6 +36,13 @@
     </div>
 
     <div class="control-group">
+      <%= f.label :invoice_quantity, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :invoice_quantity, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
       <%= f.label :return_quantity, :class => 'control-label' %>
       <div class="controls">
         <%= f.text_field :return_quantity, :class => 'text_field' %>
