--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -20,6 +20,8 @@
   <dd><%= @tax_invoice.invoice_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:po_quantity) %>:</strong></dt>
   <dd><%= @tax_invoice.po_quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:invoice_quantity) %>:</strong></dt>
+  <dd><%= @tax_invoice.invoice_quantity %></dd>
   <dt><strong><%= model_class.human_attribute_name(:return_quantity) %>:</strong></dt>
   <dd><%= @tax_invoice.return_quantity %></dd>
   <dt><strong><%= model_class.human_attribute_name(:rejected_quantity) %>:</strong></dt>
