pdf height increase

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -12,6 +12,7 @@
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:product_type) %></th>
       <th><%= model_class.human_attribute_name(:po_quantity) %></th>
+      <th><%= model_class.human_attribute_name(:balance_quantity) %></th>
 
 
 
@@ -28,7 +29,7 @@
         <td><%= order.product_name %></td>
         <td><%= order.product_type %></td>
         <td><%= order.po_quantity %></td>
-
+        <td><%= order.balance_quantity %></td>
 
 
         <td>
