--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,6 +16,8 @@
   <dd><%= @order.product_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:po_quantity) %>:</strong></dt>
   <dd><%= @order.po_quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:balance_quantity) %>:</strong></dt>
+  <dd><%= @order.balance_quantity %></dd>
 
 
 </dl>
