--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -5,10 +5,10 @@
   </title>
 </head>
 <body>
-<table height="1400" width="1150" align="center">
+<table height="1530" width="1150" align="center">
   <tr>
     <td>
-      <table height="200" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="230" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
         <tr>
           <td valign="top">
 
@@ -57,7 +57,7 @@
         </tr>
       </table>
 
-      <table height="35" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top" height="15%">
           <td width="4%" align="center">Sr. No</td>
@@ -69,7 +69,7 @@
         </tr>
       </table>
 
-      <table height="35" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top" >
           <td width="4%" align="center">&nbsp;</td>
@@ -89,7 +89,21 @@
           <td width="4%" align="center">&nbsp;</td>
           <td width="15%" align="center"><%= @tax_invoice.product_number %></td>
           <td width="30%" align="center"> <%= @tax_invoice.product_name %></td>
-          <td width="13%" align="center"><%= @tax_invoice.po_quantity %></td>
+          <td width="13%" align="center">PO Quantity<br><%= @tax_invoice.po_quantity %></td>
+          <td width="23%" align="center">&nbsp;</td>
+
+          <td width="15%" align="center">&nbsp;</td>
+
+        </tr>
+      </table>
+
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="4%" align="center">&nbsp;</td>
+          <td width="15%" align="center">&nbsp;</td>
+          <td width="30%" align="center"> &nbsp;</td>
+          <td width="13%" align="center">Invoice Quantity<br><%= @tax_invoice.invoice_quantity %></td>
           <td width="23%" align="center">&nbsp;</td>
 
           <td width="15%" align="center">&nbsp;</td>
@@ -125,7 +139,7 @@
         </tr>
       </table>
 
-      <table height="270" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="170" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -139,7 +153,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -153,7 +167,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -167,7 +181,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -181,7 +195,7 @@
         </tr>
       </table>
 
-      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
@@ -196,7 +210,7 @@
       </table>
 
 
-      <table height="30" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="60" width="1150" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
