--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -479,9 +479,11 @@
   }
   .container,
   .navbar-static-top .container,
-  .navbar-fixed-top .container,
+  .navbar-fixed-top .container {
+      width: 1000px;
+  }
   .navbar-fixed-bottom .container {
-    width: 724px;
+    width: 1000px;
   }
   .span12 {
     width: 724px;
