--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">ManufacturingErp</a>
+         <!-- <a class="brand" href="#">ERP</a>   -->
           <div class="container nav-collapse">
             <ul class="nav">
               <li><%= link_to "Products", :products  %></li>
@@ -55,6 +55,10 @@
               <li><%= link_to "companies", :companies  %></li>
 
               <li><%= link_to "Tax Invoice", :tax_invoices  %></li>
+
+              <li><%= link_to "Employs", :employs  %></li>
+
+              <li><%= link_to "Employ Payments", :employ_payments  %></li>
 
               <li><%= link_to "Logout", destroy_user_session_path, :method => :delete  %></li>
             </ul>
