--- a/app/views/employs/_form.html.erb
+++ b/app/views/employs/_form.html.erb
@@ -1,29 +1,33 @@
-<%= form_for(@employ) do |f| %>
-  <% if @employ.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@employ.errors.count, "error") %> prohibited this employ from being saved:</h2>
+<%= form_for @employ, :html => { :class => 'form-horizontal' } do |f| %>
 
-      <ul>
-      <% @employ.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+    <%= f.text_field :name, :class => 'number_field' %>
     </div>
-  <% end %>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+
+    <div class="control-group">
+    <%= f.label :add, :class => 'control-label' %>
+      <div class="controls">
+    <%= f.text_field :add, :class => 'number_field' %>
+     </div>
+   </div>
+
+
+    <div class="control-group">
+    <%= f.label :mobile_no, :class => 'control-label' %>
+      <div class="controls">
+    <%= f.text_field :mobile_no, :class => 'number_field' %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :add %><br />
-    <%= f.text_field :add %>
-  </div>
-  <div class="field">
-    <%= f.label :mobile_no %><br />
-    <%= f.number_field :mobile_no %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+
+
+    <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary'  %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                  employs_path, :class => 'btn' %>
   </div>
 <% end %>
