--- a/app/views/employ_payments/edit.html.erb
+++ b/app/views/employ_payments/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing employ_payment</h1>
+<%- model_class = EmployPayment -%>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @employ_payment %> |
-<%= link_to 'Back', employ_payments_path %>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
