--- a/app/views/employ_payments/index.html.erb
+++ b/app/views/employ_payments/index.html.erb
@@ -1,27 +1,34 @@
-<h1>Listing employ_payments</h1>
+<%- model_class = EmployPayment -%>
 
-<table>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+
+<table class="table table-striped">
+  <thead>
   <tr>
-    <th>Employ name</th>
-    <th>Micor code</th>
-    <th>Amount</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+    <th><%= model_class.human_attribute_name(:id) %></th>
+    <th><%= model_class.human_attribute_name(:employ_name) %></th>
+    <th><%= model_class.human_attribute_name(:bank_name) %></th>
+    <th><%= model_class.human_attribute_name(:micor_code) %></th>
+    <th><%= model_class.human_attribute_name(:amount) %></th>
 
+  </tr>
+  </thead>
+  <tbody>
 <% @employ_payments.each do |employ_payment| %>
   <tr>
+    <td><%= link_to employ_payment.id, employ_payment_path(employ_payment) %></td>
     <td><%= employ_payment.employ_name %></td>
+    <td><%= employ_payment.bank_account.bank_name +  employ_payment.bank_account.account_number %></td>
     <td><%= employ_payment.micor_code %></td>
     <td><%= employ_payment.amount %></td>
-    <td><%= link_to 'Show', employ_payment %></td>
-    <td><%= link_to 'Edit', edit_employ_payment_path(employ_payment) %></td>
-    <td><%= link_to 'Destroy', employ_payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
   </tr>
 <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Employ payment', new_employ_payment_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_employ_payment_path,
+            :class => 'btn btn-primary' %>
