--- a/app/views/employs/edit.html.erb
+++ b/app/views/employs/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing employ</h1>
+<%- model_class = Employ -%>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @employ %> |
-<%= link_to 'Back', employs_path %>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
