--- a/app/views/employs/show.html.erb
+++ b/app/views/employs/show.html.erb
@@ -1,20 +1,26 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Employ -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @employ.name %>
-</p>
-
-<p>
-  <b>Add:</b>
-  <%= @employ.add %>
-</p>
-
-<p>
-  <b>Mobile no:</b>
-  <%= @employ.mobile_no %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @employ.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:add) %>:</strong></dt>
+  <dd><%= @employ.add %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:mobile_no) %>:</strong></dt>
+  <dd><%= @employ.mobile_no %></dd>
+</dl>
 
 
-<%= link_to 'Edit', edit_employ_path(@employ) %> |
-<%= link_to 'Back', employs_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              employs_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_employ_path(@employ), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              employ_path(@employ),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
