final for delivery after removing all error

--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -48,7 +48,7 @@
 
               </tr>
               <tr>
-                <td colspan="4">Vendor Code No.:- 1875</td>
+                <td colspan="4">Vendor Code No.:- <%= @tax_invoice.vender_code %></td>
 
               </tr>
             </table>
